# tree-gen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  out.mtl
examples/: LICENSE
examples/fir/: tree.mtl
report/: report.tex
resources/: LICENSE
resources/lemon_leaf/: LEAF.mtl
resources/lemon_leaf/source/: LEAF.mtl
src/: main.cpp  tree-gen.cpp
src/voro++/src/: container.cc
src/yocto/: yocto_gl.h
src/yocto/ext/: stb_image.cpp
tests/basic_pl/: basic_pl.gltf  basic_pl.mtl
tests/cornell_box/: cornell_box.gltf  cornell_box.mtl
tests/instancel_pl/: instancel_pl.gltf  instancel_pl.mtl
tests/instances_pl/: instances_pl.gltf
tests/lines_al/: lines_al.gltf  lines_al.mtl
tests/metals_al/: metals_al.gltf  metals_al.mtl
tests/metals_el/: metals_el.gltf  metals_el.mtl
tests/normalmap_pl/: normalmap_pl.gltf  normalmap_pl.mtl
tests/nothing_el/: nothing_el.gltf  nothing_el.mtl
tests/plane_al/: plane_al.gltf  plane_al.mtl
tests/plastics_al/: plastics_al.gltf  plastics_al.mtl
tests/plastics_el/: plastics_el.gltf  plastics_el.mtl  sky1.hdr
tests/points_al/: points_al.gltf  points_al.mtl
tests/simple_al/: simple_al.gltf  simple_al.mtl
tests/simple_el/: simple_el.gltf  simple_el.mtl
tests/simple_pl/: simple_pl.gltf  simple_pl.mtl
tests/subdiv_al/: subdiv_al.gltf  subdiv_al.mtl
tests/tesselation_pl/: tesselation_pl.gltf  tesselation_pl.mtl
tests/textures/: gammaf.hdr  sky2.hdr
tests/textureuv_pl/: textureuv_pl.gltf  textureuv_pl.mtl
tests/transparent_al/: transparent_al.gltf  transparent_al.mtl
